[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "sokpy"
version = "0.1.2"
description = "Unofficial Python wrapper for SOK / S-Kaupat APIs"
readme = "README.md"
authors = [
  {name = "Collectseal120"}
]
license = "MIT"
requires-python = ">=3.7"
dependencies = [
  "requests",
  "beautifulsoup4"
]

[project.urls]
Homepage = "https://github.com/Collectseal120/sokpy"
Repository = "https://github.com/Collectseal120/sokpy"